--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "syntaxnet"]
 	path = textfeatures/parsing/models
-	url = https://github.com/tensorflow/tensorflow.git
+	url = https://github.com/tensorflow/models.git
 
